--- a/RationShop/AdminApp/templates/Index.html
+++ b/RationShop/AdminApp/templates/Index.html
@@ -96,6 +96,27 @@
                     </li>
                     <li class="nav-small-cap">
                         <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                        <span class="hide-menu">Ration</span>
+                    </li>
+                    <li class="sidebar-item">
+                        <a class="sidebar-link" href="{% url 'AddRation' %}" aria-expanded="false">
+                <span>
+                  <i class="ti ti-alert-circle"></i>
+                </span>
+                            <span class="hide-menu">Add Ration</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a class="sidebar-link" href="{% url 'View_Ration' %}" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                            <span class="hide-menu">View Rations</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-small-cap">
+                        <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                         <span class="hide-menu">User Messages</span>
                     </li>
                     <li class="sidebar-item">
