--- a/RationShop/WebApp/templates/ContactUs.html
+++ b/RationShop/WebApp/templates/ContactUs.html
@@ -63,17 +63,25 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
+                                    {% if request.session.Ration_Card %}
                                     <a class="nav-link" href="{% url 'Home' %}"> Home </a>
+                                    {% elif request.session.Reg_Num %}
+                                    <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
+                                    {% endif %}
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'Products' %}">Ration</a>
+                                <li class="nav-item ">
+                                    {% if request.session.Ration_Card %}
+                                    <a class="nav-link" href="{% url 'Products' %}"> Ration </a>
+                                    {% elif request.session.Reg_Num %}
+                                    <a class="nav-link" href="{% url 'ShopStock' %}"> Stock </a>
+                                    {% endif %}
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'CartPage' %}">Cart</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Orders</a>
+                                    <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'About' %}">About</a>
@@ -88,14 +96,36 @@
                                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                        {% if request.session.U_Name %}
-                                        <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
+                                        {% if request.session.Ration_Card %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Ration_Card }}</h2>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if details and details.id %}
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' details.id %}">My Details</a>
                                         </button>
+                                        {% elif shp and shp.id %}
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
+                                        </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
+                                        {% elif request.session.Reg_Num %}
+                                        <h2 style="text-align:center;">Hi, {{ request.session.Reg_Num }}</h2>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        {% if shp and shp.id %}
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
+                                        </button>
+                                        {% else %}
+                                        <p style="text-align: center;">Details not available</p>
+                                        {% endif %}
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
                                         {% endif %}
