--- a/RationShop/WebApp/templates/Products.html
+++ b/RationShop/WebApp/templates/Products.html
@@ -77,7 +77,7 @@
                                     <a class="nav-link" href="{% url 'CartPage' %}">Cart</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Orders</a>
+                                    <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'About' %}">About</a>
@@ -125,8 +125,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="titlepage">
-                    <h2>Our Available Stocks</h2>
-                    <p>Here Is A List Of Items That Are Available in Our Stocks</p>
+                    <h2> Your Assigned Rations</h2>
+                    <p>Here Is A List Of Items That Are Assigned To You This Month</p>
                 </div>
             </div>
         </div>
@@ -135,11 +135,11 @@
             <div class="col-md-3 ">
                 <div class="our_main_box">
                     <div class="our_img">
-                        <figure><img src="{{i.Item_Image.url}}" alt="#"/></figure>
+                        <figure><img src="{{i.R_Image.url}}" alt="#"/></figure>
                     </div>
                     <div class="our_text">
-                        <h4>₹<strong class="yellow">{{i.Item_Price}}</strong></h4>
-                        <h3>{{i.Item}}</h3><br>
+                        <h4>₹<strong class="yellow">{{i.R_Price}}</strong></h4>
+                        <h3>{{i.Ration}}</h3><br>
                         <button class="btn btn-info"><a href="{% url 'SingleProduct' si_id=i.id %}">More Details</a>
                         </button>
                     </div>
