--- a/RationShop/WebApp/templates/ShopSingleProd.html
+++ b/RationShop/WebApp/templates/ShopSingleProd.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
+
     <!-- basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,14 +34,29 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <style>
+        .product-image-placeholder {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 400px;
+        }
+        .rating-stars .fas, .rating-stars .far {
+            color: #FFD700;
+            font-size: 1.2rem;
+        }
+    </style>
 </head>
-
-<!-- body -->
 <body class="main-layout inner_page">
-<!-- loader  -->
 
-<!-- end loader -->
-<!-- header -->
 <header>
     <!-- header inner -->
     <div class="header">
@@ -67,10 +83,10 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
+                                    <a class="nav-link" href="{% url 'Home' %}"> Home </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="{% url 'ShopStock' %}">Stocks</a>
+                                    <a class="nav-link" href="{% url 'Products' %}">Ration</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -94,7 +110,6 @@
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                                         {% if request.session.Reg_Num %}
                                         <h2 style="text-align:center;">Hi,{{request.session.Reg_Num}}</h2>
-
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' details.id %}">My Details</a>
@@ -117,40 +132,111 @@
     </div>
 </header>
 
-<!-- end header inner -->
-<!-- end header -->
-<!-- Our Juices -->
-<div class="juices ">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Our Available Stocks</h2>
-                    <p>Here Is A List Of Items That Are Available in Our Stocks</p>
-                </div>
+
+<div class="container py-5">
+    <div class="row">
+        <!-- Product Image -->
+        <div class="col-lg-6 mb-4 mt-4 mb-lg-0">
+            <div class="product-image-placeholder">
+                <img src="{{singl.Item_Image.url}}" style="width:400px;height:500px;margin-top:200px;">
             </div>
         </div>
-        <div class="row">
-            {% for i in stks %}
-            <div class="col-md-3 ">
-                <div class="our_main_box">
-                    <div class="our_img">
-                        <figure><img src="{{i.Item_Image.url}}" alt="#"/></figure>
+
+        <!-- Product Details -->
+        <div class="col-lg-6">
+            <h1 class="mb-3">{{singl.Item}}</h1>
+
+            <!-- Rating -->
+
+            <!-- Price -->
+            <h2 class="mb-4">₹{{singl.Item_Price}}/ kg</h2>
+
+            <!-- Description -->
+            <p class="lead mb-4">
+                {{singl.Description}}
+            </p>
+
+            <!-- Features -->
+            <div class="mb-4">
+                <h4 class="mb-3">Key Features:</h4>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> 100% Natural</li>
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> No preservatives</li>
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> High nutritional value</li>
+                </ul>
+            </div>
+            <br>
+            <h5><b>Availabilty ? : {{singl.Availability}}</b></h5> <br>
+
+            <form action="{% url 'Save_Cart' %}" method="post">
+                {% csrf_token %}
+                <div class="mb-4">
+                    <label class="form-label">Quantity (In Kg):</label>
+                    <div class="input-group" style="max-width: 150px;">
+
+
+                        <input type="hidden" name="rname" value="{{ singl.Item }}">
+                        <input type="hidden" id="price" name="rprice" value="{{ singl.Item_Price }}">
+
+                        <!-- Read-only quantity field -->
+                        <input
+
+                                id="quantity"
+                                type="number"
+                                class="form-control text-center"
+                                min="1" name="rquant"
+                                value="{{ singl.Total_Quantity }}"
+                        >
+
+                        <!-- Hidden field for quantity to ensure it gets submitted -->
+
+                        <!-- Hidden total field (auto-updated via JS) -->
                     </div>
-                    <div class="our_text">
-                        <h4>₹<strong class="yellow">{{i.Item_Price}}</strong></h4>
-                        <h3>{{i.Item}}</h3><br>
-                        <button class="btn btn-info"><a href="{% url 'ShopSingle' s_id=i.id %}">More Details</a>
-                        </button>
+
+                    <label class="form-label mt-2">Total Price:</label>
+                    <div class="input-group" style="max-width: 150px;">
+
+                        <!-- Read-only quantity field -->
+                        <input
+                                name="rtotal"
+                                readonly
+                                id="total"
+                                type="text"
+                                class="form-control text-center"
+                                min="1"
+                                value="{{ singl.Item_Price }}"
+                        >
+
+                        <!-- Hidden field for quantity to ensure it gets submitted -->
+
+                        <!-- Hidden total field (auto-updated via JS) -->
                     </div>
                 </div>
-            </div>
-            {% endfor %}
+
+
+                {% if singl.Availability == 'Item Is Available' %}
+                    {% if already_in_cart %}
+                    <button class="btn btn-secondary w-100 py-3" disabled>
+                        <i class="fas fa-shopping-cart me-2"></i> Already in Cart
+                    </button>
+                    {% else %}
+                    <button class="btn btn-success w-100 py-3" type="submit">
+                        <i class="fas fa-shopping-cart me-2"></i> Add To Cart
+                    </button>
+                    {% endif %}
+                {% else %}
+                    <button class="btn btn-danger" disabled style="width:200px;height:70px;">
+                        Item Not Available
+                    </button>
+                {% endif %}
+            </form>
+
+
         </div>
     </div>
 </div>
-<!-- end Our Juices  section -->
-<!--  footer -->
+
+
 <footer id="contact" class="bd-footer py-4 py-md-5 mt-5">
     <div class="footer">
 
@@ -175,7 +261,7 @@
                     <h4 style="color:white;" class="mb-4 border-bottom">Important Links</h4>
                     <ul class="mb-4">
                         <li class="mb-2"><a href="{% url 'Home' %}" style="color:white;">Home</a></li>
-                        <li class="mb-2"><a style="color:white;" href="{% url 'Products' %}">Products</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'Products' %}">Assigned Rations</a></li>
                         <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
                         <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
                         </li>
@@ -187,6 +273,7 @@
                 </div>
                 <div class="col-6 col-lg-2 mb-3">
                     <h4 style="color:white;" class="border-bottom mb-4">For Admins</h4>
+
                     <ul class="list-unstyled">
                         <li class="mb-2"><a style="color:white;" href="{% url 'AdminLoginPage' %}">Go To Admin
                             DashBoard</a></li>
@@ -246,8 +333,21 @@
     </div>
 </footer>
 
-<!-- end footer -->
-<!-- Javascript files-->
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+<script>
+            $(document).ready(function(){
+                $("#quantity").change(function(){
+                x = document.getElementById("price").value;
+                y= document.getElementById("quantity").value;
+                res = x * y
+                document.getElementById("total").value=res;
+
+                })
+            })
+        </script>
+
 <script src="{% static 'web/assets/js/jquery.min.js' %}"></script>
 <script src="{% static 'web/assets/js/popper.min.js' %}"></script>
 <script src="{% static 'web/assets/js/bootstrap.bundle.min.js' %}"></script>
@@ -261,6 +361,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
-
